--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "debounce": "^2.2.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
