--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/lodash": "^4.17.13",
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
