--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^17.0.83",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
